test main.js function

--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
       <input type="radio" id="mc" name="question5" value="Outside global">Outside global<br>
       <input type="radio" id="mc" name="question5" value="Inside global">Inside global<br>
 
-
+     <input type="button" id="button" value="Submit" onclick="check();">
     </form>
+
+    <div id="after_submit">
+      <p id="percentage_scored"></p>
+      <p id="message"></p>
+    </div>
   </body>
 </html>
